# zero2prod-rust

./: .dockerignore  Cargo.toml  Dockerfile  README.md  configuration.yaml  spec.yaml
.github/workflows/: audit.yml  general.yml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20260117230445_create_subscriptions_table.sql  20260311232815_make_status_not_null_in_subscriptions.sql  20260311233916_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs  utils.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs  subscriptions_confirm.rs
tests/routes/: health_check.rs  subscriptions.rs
